compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__use___arity_3.snap
---
source: compiler-core/src/erlang/tests/use_.rs
expression: "\npub fn main() {\n  use <- trip(1.0, \"\")\n  123\n}\n\nfn trip(x, y, f) {\n  let z = f()\n  #(x, y, z)\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() {
  use <- trip(1.0, "")
  123
}

fn trip(x, y, f) {
  let z = f()
  #(x, y, z)
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([main/0]).

-file("project/test/my/mod.gleam", 7).
-spec trip(K, L, fun(() -> P)) -> {K, L, P}.
trip(X, Y, F) ->
    Z = F(),
    {X, Y, Z}.

-file("project/test/my/mod.gleam", 2).
-spec main() -> {float(), binary(), integer()}.
main() ->
    trip(1.0, <<""/utf8>>, fun() -> 123 end).
